2008-12-08  Matthias Clasen  <mclasen@redhat.com>

	Bug 558298 – Hide ecryptfs mounts

	* gunixmounts.c: (guess_system_internal): Hide ecryptfs mounts, 
	so that the desktop does not show both the mount and the target 
	directory. Patch by Martin Pitt
 
2008-12-08  Matthias Clasen  <mclasen@redhat.com>

	Bug 555465 – GUnix{Input,Output}Stream lacks fd/close_fd_at_close 
	property

	* gio.symbols:
	* gunixinputstream.[hc]:
	* gunixoutputstream.[hc]: Add "fd" and "close-fd" properties
	including getters and setters. Patch by Maciej Piechotka

2008-12-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 558458 – Cannot build gio tests on Solaris using SUN cc

	* tests/live-g-file.c: Support compilers that don't understand
	ISO C varargs macros. Patch by Eric Lamarque

2008-12-07  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 526320 – should not list mounts that the user doesn't have 
	permission to use

	gunixmounts.c: Use g_access() to check accessibility of local devices.
	Patch by Martin Pitt

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* gdatainputstream.c (g_data_input_stream_read_line): Revert the
	behaviour change, and update the docs instead, to avoid breaking
	existing users.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        * gio.symbols:
        * gmount.[ch]:
        * gunionvolumemonitor.c:
        * gvolume.c:
	Add and document g_mount_is_shadowed plus calls
	to set/unset a mount as shadowed
	
2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/tests/g-icon.c: Comment out two failing tests

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 555486 – No way to recover command line from GAppInfo

	* gio.symbols:
	* gappinfo.[hc]: Add g_app_info_get_commandline. Requested
	by Hans Petter Jansson.
	
	* gdesktopappinfo.c: And implement it here.
